--- a/.github/workflows/build-site.yaml
+++ b/.github/workflows/build-site.yaml
@@ -37,7 +37,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
         with:
-          enablement: false
+          enablement: true
 
       - name: Build live version of site
         run: |
