--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -4,7 +4,7 @@
 
 pi:
   icon: fa-solid fa-microscope
-  description: Principal Investigator
+  description: Group Leader
 
 postdoc:
   icon: fa-solid fa-glasses
@@ -25,6 +25,10 @@ programmer:
 mascot:
   icon: fa-solid fa-dog
   description: Mascot
+
+alumnus:
+  icon: fa-solid fa-graduation-cap
+  description: 
 
 # general
 
