--- a/.github/workflows/build-preview.yaml
+++ b/.github/workflows/build-preview.yaml
@@ -29,19 +29,26 @@ jobs:
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.head_ref }}
-    
-      - name: Install Ruby manually
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl git
-          curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
-          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
-          echo 'eval "$(rbenv init - bash)"' >> ~/.bashrc
-          source ~/.bashrc
-          rbenv install 3.1.0
-          rbenv global 3.1.0
-          gem install bundler
-          
+      
+      
+      # - name: Install Ruby manually
+      #   run: |
+      #     sudo apt-get update
+      #     sudo apt-get install -y curl git
+      #     curl -fsSL https://github.com/rbenv/rbenv-installer/raw/main/bin/rbenv-installer | bash
+      #     echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
+      #     echo 'eval "$(rbenv init - bash)"' >> ~/.bashrc
+      #     source ~/.bashrc
+      #     rbenv install 3.1.0
+      #     rbenv global 3.1.0
+      #     gem install bundler
+
+#TS added start; rbenv fix attempt
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2 # or your desired version
+ #TS added end    
       - name: Install Ruby packages
         if: github.event.action != 'closed'
         uses: ruby/setup-ruby@v1.172.0
