--- a/.github/workflows/build-preview.yaml
+++ b/.github/workflows/build-preview.yaml
@@ -44,17 +44,16 @@ jobs:
       #     gem install bundler
 
 #TS added start; rbenv fix attempt
-      - name: Set up Ruby
+      - name: Set up Ruby with rbenv
         run: |
           sudo apt-get update
           sudo apt-get install -y git build-essential libssl-dev libreadline-dev zlib1g-dev
           git clone https://github.com/rbenv/rbenv.git ~/.rbenv
           git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
-          echo 'export PATH="$HOME/.rbenv/bin:$PATH"' >> ~/.bashrc
-          echo 'eval "$(rbenv init -)"' >> ~/.bashrc
-          source ~/.bashrc
-          rbenv install 3.3.0  # Or your required Ruby version
-          rbenv global 3.3.0
+          export PATH="$HOME/.rbenv/bin:$PATH"
+          eval "$(~/.rbenv/bin/rbenv init -)"
+          ~/.rbenv/bin/rbenv install 3.3.0  # Or your required Ruby version
+          ~/.rbenv/bin/rbenv global 3.3.0
           ruby -v
  #TS added end    
       - name: Install Ruby packages
