--- a/.github/workflows/build-preview.yaml
+++ b/.github/workflows/build-preview.yaml
@@ -21,51 +21,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # for debugging
-      - uses: crazy-max/ghaction-dump-context@v2
+      - name: Debug dump
+        if: runner.debug == '1'
+        uses: crazy-max/ghaction-dump-context@v2
 
       - name: Checkout branch contents
+        if: github.event.action != 'closed'
         uses: actions/checkout@v4
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.head_ref }}
-      
-      
 
-#TS added start; rbenv fix attempt
-      - name: Install Ruby to $RUNNER_TOOL_CACHE
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y git build-essential libssl-dev libreadline-dev zlib1g-dev
-          git clone https://github.com/rbenv/rbenv.git ~/.rbenv
-          git clone https://github.com/rbenv/ruby-build.git ~/.rbenv/plugins/ruby-build
-          export PATH="$HOME/.rbenv/bin:$PATH"
-          eval "$(~/.rbenv/bin/rbenv init -)"
-          ~/.rbenv/plugins/ruby-build/bin/ruby-build 3.3.0 /opt/hostedtoolcache/Ruby/3.3.0/x64
-          touch /opt/hostedtoolcache/Ruby/3.3.0/x64.complete
-          export PATH="/opt/hostedtoolcache/Ruby/3.3.0/x64/bin:$PATH"
-          ruby -v
-
-      - name: Install Bundler (user install, safe for all runners)
-        run: |
-          gem install bundler --user-install
-          export PATH="$HOME/.gem/ruby/3.3.0/bin:$PATH"
-          bundler -v
-
-      - name: Install dependencies with Bundler
-        run: |
-          export PATH="$HOME/.gem/ruby/3.3.0/bin:$PATH"
-          bundle install --jobs 4 --retry 3
- #TS added end    
-
+      - name: Install Ruby packages
+        if: github.event.action != 'closed'
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.1"
+          bundler-cache: true
 
       - name: Get Pages url
         if: github.event.action != 'closed'
         id: pages
         uses: actions/configure-pages@v4
 
-      # for debugging
-      - if: runner.debug == '1'
+      - name: SSH debug
+        if: runner.debug == '1'
         uses: mxschmitt/action-tmate@v3
 
       - name: Build preview version of site
@@ -74,7 +54,30 @@ jobs:
           JEKYLL_ENV=production bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path || '' }}/${{ env.PREVIEWS_FOLDER }}/pr-${{ github.event.number }}"
 
       - name: Commit preview to Pages branch
+        if: github.event.action != 'closed'
         uses: rossjrw/pr-preview-action@v1.4.7
         with:
           source-dir: _site
           umbrella-dir: ${{ env.PREVIEWS_FOLDER }}
+
+      - name: Checkout Pages branch
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+
+      - name: Clean up preview folders
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { rm } = require("fs").promises;
+            const { PREVIEWS_FOLDER } = process.env;
+            const { owner, repo } = context.repo;
+            const prs = (await github.rest.pulls.list({ owner, repo, state: "closed" })).data;
+            for (const { number } of prs)
+              await rm(`${PREVIEWS_FOLDER}/pr-${number}`, { recursive: true, force: true });
+
+      - name: Commit changed files
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          branch: gh-pages
+          commit_message: "Clean up previews"
